# ISEC

./: .gitignore  CHANGES_SUMMARY.md  COMPLETE_PARAMETER_ANALYSIS_README.md  COST_MATRIX_README.md  COST_SENSITIVITY_README.md  Clases.xlsx  Costo_Personalizado.xlsx  Custom_cost.xlsx  Distancia_Semantica.py  FINAL_INTERPRETATION_GUIDE.md  GUIDE.md  ISEC.py  ISEC_README.md  ISEC_Results.xlsx  ISEC_provincias_Results.xlsx  PARAMETER_ANALYSIS_SUMMARY.md  PARAMETER_SENSITIVITY_OVERVIEW.md  PARAMETER_SENSITIVITY_README.md  README.md  RUN_ALL_ANALYSES.py  SEMANTIC_DISTANCE_README.md  SETUP.md  Tabla3.xlsx  categorias_costos.txt  categorias_distancias.txt  check_cols.py  config.py  example.env  fix_template.py  insertos.xlsx  insertos_costo_caracteres.txt  matriz_costo_caracteres.py  oraciones_ISEC.txt  oraciones_costo_caracteres.txt  oraciones_costos.txt  oraciones_distancias.txt  provincias.xlsx  provincias_ISEC.txt  provincias_small.xlsx  pyproject.toml  (+5 more)
app/: Distancia_Semantica.py  ISEC.py  README.md  backend_check.py  embeddings_cache.pkl  main.py  main.py.bak  main_pair_detail.py  matriz_costo_caracteres.py  monkeypatch.py  precalc.py  run_demo.sh
datasets/: insertos_small.xlsx
reports/: comprehensive_parameter_analysis.py  comprehensive_parameter_report.xlsx  cost_sensitivity_analysis.py  cost_sensitivity_report.xlsx  parameter_analysis_summary.py  parameter_movement_visualizer.py  parameter_sensitivity_analysis.py  sensitivity_report.xlsx  sentence_movement_demo.py
resultados/: ISEC_Insertos_small.xlsx  ISEC_insertos1000_Results.xlsx  insertos_1000_isec.txt  oraciones_ISEC.txt  oraciones_costo_caracteres.txt  oraciones_distancias.txt  provincias_ISEC.txt  table3_ds.txt
simulaciones/: CMP.py  CMP_Optimizacion.py  CMP_montecarlo.py  (+7 more)
(+8 files in other folders)
