[project]
name = "isec"
version = "0.1.0"
description = "Character Cost Matrix for Edit Distance Calculations"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "python-dotenv>=1.0.0",
    "chromadb>=1.4.0",
    "ollama>=0.6.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/isec"
Repository = "https://github.com/yourusername/isec"
Issues = "https://github.com/yourusername/isec/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
